2011-03-10  Philippe Normand  <pnormand@igalia.com>

Reviewed by Xan Lopez.

        [GTK] unittests/testapplicationcache crashes
        https://bugs.webkit.org/show_bug.cgi?id=56083

        Removed the webkit_application_cache_get_database_directory_path
        API as the underlying ApplicationCacheStorage doesn't allow
        setting the cache path multiple times.

        * tests/testapplicationcache.c:
        (main):
        * webkit/webkitapplicationcache.cpp:
        (webkit_application_cache_get_database_directory_path):
        * webkit/webkitapplicationcache.h:
        * webkit/webkitglobals.cpp:
        (webkitInit):

Canonical link: https://commits.webkit.org/70604@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80715 268f45cc-cd09-0410-ab3c-d52691b4dbfc